--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path_provider: 2.0.15
   permission_handler: ^11.4.0
   audioplayers: ^6.4.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
