--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "/media/ruhul/Drive F/flutter/demo_clipboard/linux"
+    "cmake.sourceDirectory": "/mnt/F09ABF3F9ABF0160/flutter/demo_clipboard/linux"
 }
