--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
-  audioplayers: ^6.4.0
   intl: ^0.20.2
   share_plus: ^10.1.4
   google_speech: ^5.3.0
+  file_picker: ^10.1.2
+  just_audio: ^0.9.46
+  cached_network_image: ^3.4.1
+  audio_video_progress_bar: ^2.0.3
+  just_audio_background: ^0.0.1-beta.15
+  rxdart: ^0.27.7
+  stack_trace: ^1.12.0
+  get: ^4.7.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assests/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
